--- a/main/r/CMakeLists.txt
+++ b/main/r/CMakeLists.txt
@@ -39,7 +39,8 @@ INSTALL( FILES
             rStride_intervention_baseline.R
             rStride_intervention.R
             rStride_superspreading.R			 
-            rStride_pop.R				 
+            rStride_pop.R	
+            rStride_trans_prob_estimation.R			 
 
 	DESTINATION ${BIN_INSTALL_LOCATION}  
 	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ
