[EventLogMode: Incidence] New EventLogMode with minimal info on infection (age, timing, status) to reduce memory burden for large simulations. Aligned the logging of participants and contact tracing to the EventLogMode enumeration. + updated the rStride gtester to return more informative warnings.

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ vignettes/*.pdf
 rsconnect/
 README.html
 main/r/rstride/rmarkdown/covid19_stride_disease_files/figure-latex
+regression_rstride_summary.pdf
