Removed travis_wait statement.

--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,7 @@ install:
     fi
 
 script:
-  - make all && if [[ "$MAKE_TEST" = "true" ]]; then travis_wait mvn make test; fi
+  - make all && if [[ "$MAKE_TEST" = "true" ]]; then make test; fi
 
 after_success:
     # Generate the docs only if master, the travis_build_docs is true and we can use secure variables
